# operating-system

./: CMakeLists.txt  MUTEX_IMPLEMENTATION.md  MUTEX_USAGE_EXAMPLE.c  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md  main.c  memory.c  memory.h  pcb.c  queues.c  queues.h
core/: mutex.c  mutex.h  pcb.h  queues.c  queues.h
execution/: interpreter.c  interpreter.h  syscalls.c  syscalls.h
memory/: memory.h
scheduler/: scheduler.c  scheduler.h
